k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yousac-public
  labels:
    app.kubernetes.io/part-of: yousac
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: yousac-managed-cert
    kubernetes.io/ingress.global-static-ip-name: yousac-prod-ip
spec:
  rules:
    - host: yousac-thany.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /mock-oauth
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
